force-app/main/default/objects/Account_Order_History__c/Account_Order_History__c.object-meta.xml
<CustomObject>
    <description>Used to capture summarized Account Order history.  This data is not the same as &quot;Sales History&quot; as it does not reflect recognized revenue, only booked revenue.</description>
    <label>Account Order History</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Order History Year</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Order Histories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>