force-app/main/default/objects/Account_Order_History__c/fields/Services_All__c.field-meta.xml
<CustomField>
    <fullName>Services_All__c</fullName>
    <formula>Services_Non_MB__c  +  Services_MB__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Services - All</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>