force-app/main/default/objects/Account_Order_History__c/fields/Software_CBT__c.field-meta.xml
<CustomField>
    <fullName>Software_CBT__c</fullName>
    <label>Software - CBT</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>