force-app/main/default/objects/Account_Order_History__c/fields/Software_CBT_All__c.field-meta.xml
<CustomField>
    <fullName>Software_CBT_All__c</fullName>
    <formula>Software_CBT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Software - CBT - All</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>