force-app/main/default/objects/Account_Order_History__c/fields/Software_Perpetual_All__c.field-meta.xml
<CustomField>
    <fullName>Software_Perpetual_All__c</fullName>
    <formula>Software_Perpetual_Non_MB__c  +  Software_Perpetual_MB__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Software - Perpetual - All</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>