force-app/main/default/objects/Account_Order_History__c/fields/Software_Perpetual_Non_MB__c.field-meta.xml
<CustomField>
    <fullName>Software_Perpetual_Non_MB__c</fullName>
    <label>Software - Perpetual - Non MB</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>