force-app/main/default/objects/Account_Order_History__c/fields/Software_Subscription_All__c.field-meta.xml
<CustomField>
    <fullName>Software_Subscription_All__c</fullName>
    <formula>Software_Subscription_Non_MB__c  +  Software_Subscription_MB__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Software - Subscription - All</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>